Added the Bomb Class Changed the Speed of the ball and where the ball is considered in bounds Changed where the player is considered in bounds

--- a/0_TestBed/0_TestBed.vcxproj
+++ b/0_TestBed/0_TestBed.vcxproj
@@ -107,6 +107,7 @@ xcopy "$(SolutionDir)include\ME\Shaders" "$(SolutionDir)_Binary\Shaders" /y</Com
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="Bomb.h" />
     <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="..\res\Resource.h" />
     <ClInclude Include="CollisionManager.h" />
@@ -120,6 +121,7 @@ xcopy "$(SolutionDir)include\ME\Shaders" "$(SolutionDir)_Binary\Shaders" /y</Com
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="FileIO.cpp" />
