--- a/0_TestBed/0_TestBed.vcxproj
+++ b/0_TestBed/0_TestBed.vcxproj
@@ -108,6 +108,7 @@ xcopy "$(SolutionDir)include\ME\Shaders" "$(SolutionDir)_Binary\Shaders" /y</Com
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Bomb.h" />
+    <ClInclude Include="BombSpawnManager.h" />
     <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="..\res\Resource.h" />
     <ClInclude Include="CollisionManager.h" />
@@ -115,6 +116,7 @@ xcopy "$(SolutionDir)include\ME\Shaders" "$(SolutionDir)_Binary\Shaders" /y</Com
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="QuadTree.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\res\BTO.rc" />
@@ -122,6 +124,7 @@ xcopy "$(SolutionDir)include\ME\Shaders" "$(SolutionDir)_Binary\Shaders" /y</Com
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Bomb.cpp" />
+    <ClCompile Include="BombSpawnManager.cpp" />
     <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="FileIO.cpp" />
@@ -130,6 +133,7 @@ xcopy "$(SolutionDir)include\ME\Shaders" "$(SolutionDir)_Binary\Shaders" /y</Com
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="QuadTree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
